; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/obs-scripting/extr_obs-scripting-lua.c_source_list_release.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/obs-scripting/extr_obs-scripting-lua.c_source_list_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@obs_source_t = common dso_local global i32 0, align 4
@source = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @source_list_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @source_list_release(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i64 @lua_rawlen(i32* %5, i32 1)
  store i64 %6, i64* %3, align 8
  store i64 0, i64* %4, align 8
  br label %7

7:                                                ; preds = %26, %1
  %8 = load i64, i64* %4, align 8
  %9 = load i64, i64* %3, align 8
  %10 = icmp ult i64 %8, %9
  br i1 %10, label %11, label %29

11:                                               ; preds = %7
  %12 = load i32, i32* @obs_source_t, align 4
  %13 = load i32, i32* @source, align 4
  %14 = mul nsw i32 %12, %13
  %15 = load i32*, i32** %2, align 8
  %16 = load i64, i64* %4, align 8
  %17 = trunc i64 %16 to i32
  %18 = add nsw i32 %17, 1
  %19 = call i32 @lua_rawgeti(i32* %15, i32 1, i32 %18)
  %20 = load i32, i32* @obs_source_t, align 4
  %21 = call i32 @ls_get_libobs_obj(i32 %20, i32 -1, i32* @source)
  %22 = load i32*, i32** %2, align 8
  %23 = call i32 @lua_pop(i32* %22, i32 1)
  %24 = load i32, i32* @source, align 4
  %25 = call i32 @obs_source_release(i32 %24)
  br label %26

26:                                               ; preds = %11
  %27 = load i64, i64* %4, align 8
  %28 = add i64 %27, 1
  store i64 %28, i64* %4, align 8
  br label %7

29:                                               ; preds = %7
  ret i32 0
}

declare dso_local i64 @lua_rawlen(i32*, i32) #1

declare dso_local i32 @lua_rawgeti(i32*, i32, i32) #1

declare dso_local i32 @ls_get_libobs_obj(i32, i32, i32*) #1

declare dso_local i32 @lua_pop(i32*, i32) #1

declare dso_local i32 @obs_source_release(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
